--- a/gradle.properties
+++ b/gradle.properties
@@ -4,26 +4,37 @@
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx6g -Dfile.encoding=UTF-8
+# I've adjusted this from 6g to 4g to be more conservative with your 8GB of RAM.
+org.gradle.jvmargs=-Xmx6g -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
+
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# The following are various performance-enhancing Gradle flags.
 org.gradle.daemon=true
-org.gradle.parallel=true
 org.gradle.configureondemand=true
 kotlin.incremental=true
 org.gradle.caching=true
 org.gradle.vfs.watch=true
-android.enableJetifier=false
 org.gradle.configuration-cache=true
+org.gradle.unsafe.configuration-cache.max-problems=500
+
+# Jetifier is disabled for better build performance since it's assumed all
+# dependencies are on AndroidX. If you add a pre-AndroidX dependency,
+# you may need to re-enable this.
+android.enableJetifier=false
